...
    <string name="main_activity_last_synced_time_label">Last Synced Time</string>
    <string name="toolbar_item_sync">Sync</string>
    <string name="toolbar_item_verify">Verify Server Details</string>
    <string name="toolbar_item_settings">Settings</string>

    <string name="drawer_sign_in_button_text">Sign-In </string>
    <string name="drawer_sign_out_button_text">Sign-Out </string>
    <string name="drawer_item_merge_conflicts">Merge Conflicts</string>
    <string name="drawer_item_update_credentials">Verify Permissions</string> <!-- Previously " Update Credentials" -->
    <string name="drawer_item_switch_sign_in_type">Switch Sign In</string>
    <string name="drawer_item_sign_out">Sign out</string>
    <string name="drawer_item_sign_in">Sign in</string>
    <string name="drawer_item_about_us">About ODK-X</string>
    <string name="drawer_item_docs">ODK-X Docs</string>

    <string name="authenticated_user">Authenticated User</string>
    <string name="anonymous_user">Anonymous</string>
    <string name="logged_out">Logged Out</string>
    <string name="enter_server_url">Enter Server URL</string>
    <string name="update_url">Update Url</string>
    <string name="choose_demo_server">Choose Demo Server</string>
    <string name="verify_server_details">Verify Server Details</string>
    <string name="scan_qr">Scan QR</string>
...
    <string name="not_verified">Not Verified</string>
    <string name="not_known_yet">Not Known Yet</string>
    <string name="allowed">Allowed</string>
    <string name="not_allowed">Not Allowed</string>
    <string name="user_logged_out_label">User is Logged Out</string>
    <string name="user_anonymous_label">User is Anonymous</string>
    <string name="switch_sign_in_type">Switch Sign In Type</string>
    <string name="sign_in_using_credentials">Sign in using Credentials</string>
    <string name="set_credentials">Set Credentials</string>
    <string name="sign_in_as_anonymous">Sign in as Anonymous User</string>
    <string name="services_gif">Service GIF</string>

</resources>

