...
    <item
        android:id="@+id/drawer_server_login"
        android:icon="@drawable/ic_server_setting"
        android:title="Server Login"/>

    <item
        android:id="@+id/drawer_resolve_conflict"
        android:icon="@drawable/ic_drawer_resolve_conflicts"
        android:title="@string/drawer_item_resolve_conflicts" />

    <item
        android:id="@+id/drawer_update_credentials"
        android:icon="@drawable/ic_drawer_update_credentials"
        android:title="@string/drawer_item_update_credentials" />

    <item
        android:id="@+id/drawer_switch_sign_in_type"
        android:icon="@drawable/ic_drawer_switch_sign_in_type"
        android:title="@string/drawer_item_switch_sign_in_type" />

    <item
        android:id="@+id/drawer_about_us"
        android:icon="@drawable/ic_drawer_about_us"
...
