<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".sync.actions.fragments.SetCredentialsFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvServerUrlLabelLogin"
        style="@style/HeadingStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/portrait_regular_margin"
        android:text="@string/main_activity_server_url_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvServerUrlLogin"
        style="@style/TextServerUrlStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/portrait_regular_margin"
        android:layout_marginTop="@dimen/portrait_label_field_margin"
        android:layout_marginEnd="@dimen/portrait_regular_margin"
        android:layout_marginBottom="@dimen/portrait_regular_margin"
        android:text="@string/default_sync_server_url"
        app:layout_constraintBottom_toTopOf="@+id/tvTitleLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvServerUrlLabelLogin" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitleLogin"
        style="@style/LargeHeadingStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/portrait_regular_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvServerUrlLogin"
        app:layout_constraintBottom_toTopOf="@+id/inputUsernameLogin"
        />


    <androidx.appcompat.widget.AppCompatTextView
        style="@style/InputFieldLabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="17dp"
        android:text="Username"
        app:layout_constraintBottom_toTopOf="@+id/inputUsernameLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleLogin"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputUsernameLogin"
        style="@style/TextInputTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/portrait_regular_margin"
        android:padding="8dp"
        android:hint="@string/username"
        app:layout_constraintBottom_toTopOf="@+id/inputPasswordLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleLogin">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputTextUsername"
            style="@style/SmallTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Enter Username"

            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/InputFieldLabelStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password"

        app:layout_constraintBottom_toTopOf="@+id/inputPasswordLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputUsernameLogin"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/inputPasswordLogin"
        style="@style/TextInputTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/portrait_regular_margin"
        android:padding="8dp"
        android:hint="@string/enter_password"
        app:layout_constraintBottom_toTopOf="@+id/btnAuthenticateUserLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputUsernameLogin"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputTextPassword"
            style="@style/SmallTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Enter Password"
            android:inputType="textPassword"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAuthenticateUserLogin"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/portrait_regular_margin"
        android:text="@string/drawer_sign_in_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPasswordLogin"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
